--- a/Carpool/src/main/res/values/strings.xml
+++ b/Carpool/src/main/res/values/strings.xml
@@ -5,5 +5,17 @@
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="greet_me_here">Greet Me Here</string>
+    <string name="submit">Submit</string>
+    <string name="contact_number">Contact Number</string>
+    <string name="phone_label">Phone:</string>
+    <string name="female">Female</string>
+    <string name="male">Male</string>
+    <string name="gender">Gender:</string>
+    <string name="destination_hint">Your desired Destination</string>
+    <string name="destination_label">To:</string>
+    <string name="source_hint">Your Starting Location</string>
+    <string name="source_label">From:</string>
+    <string name="name_hint">Your Preferred Name</string>
+    <string name="name_label">Name:</string>
 
 </resources>
