Modifying the need a cab form layout.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,21 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">CarPool</string>
+    <string name="app_name">Pool Me In</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="greet_me_here">Greet Me Here</string>
     <string name="submit">Submit</string>
-    <string name="contact_number">Contact Number</string>
+    <string name="contact_number">Contact No.</string>
     <string name="phone_label">Phone:</string>
     <string name="female">Female</string>
     <string name="male">Male</string>
     <string name="gender">Gender:</string>
-    <string name="destination_hint">Your desired Destination</string>
+    <string name="destination_hint">Enter upto 5 Destination Landmarks seperated by comma</string>
     <string name="destination_label">To:</string>
     <string name="source_hint">Your Starting Location</string>
     <string name="source_label">From:</string>
     <string name="name_hint">Your Preferred Name</string>
     <string name="name_label">Name:</string>
+    <string name="name">Name</string>
+    <string name="contact_hint">Phone Number</string>
 
 </resources>
